# jsonrepair

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
.config/: nextest.toml
.github/workflows/: README.md  c-api-tests.yml  ci.yml  python-ci.yml  python-release.yml  release.yml
benches/: comment_perf_test.rs  container_bench.rs  container_llm_bench.rs  container_valid_bench.rs  engine_compare.rs  our_llm_bench.rs  repair_bench.rs  stream_bench.rs  writer_bench.rs
docs/: bench_table.md
examples/c_example/: Makefile  README.md  advanced.c  basic.c
examples/go_example/: README.md  go.mod  main.go
include/: jsonrepair.h
python/: .github_workflows_README.md  .gitignore  Cargo.toml  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
python/examples/: basic_usage.py  benchmark.py  logging_example.py  options_example.py  streaming_example.py
python/python/jsonrepair/: __init__.py  __init__.pyi
python/scripts/: bump_version.py  verify_release_config.py
python/src/: lib.rs
python/tests/: README.md  test_basic.py  test_compatibility.py  test_edge_cases.py  test_logging_and_stream.py  test_new_features.py
scripts/: aggregate_bench.py  py_bench.py  run_benchmarks.py  test-c-api.bat  test-c-api.sh
src/: classify.rs  cli.rs  emit.rs  error.rs  ffi.rs  lib.rs  main.rs  options.rs  repair.rs  stream.rs
src/engines/: mod.rs
src/engines/llm/: mod.rs  scanner_bytes.rs
src/parser/: array.rs  cursor.rs  lex.rs  mod.rs  number.rs  object.rs  strings.rs
src/tests/: arrays_objects_more.rs  comments_edge.rs  comments_ws.rs  core_non_streaming.rs  deep_malformed.rs  file_operations.rs  jsonp_fence.rs  logging_more.rs  logging_path.rs  mod.rs  ndjson.rs  non_streaming_misc.rs  numbers.rs  numbers_more.rs  objects_arrays.rs  python_compat.rs  python_parity.rs  python_parity_deep.rs  python_parity_fuzz.rs  python_parity_more.rs  stream_fuzz.rs  stream_fuzz_large.rs  streaming.rs  strings_escapes_more.rs  strings_regex_concat.rs  writer_streaming_more.rs
tests/: Makefile  README.md  c_api_test.c  cli.rs  ffi_tests.rs  llm_basic.rs  llm_fenced_jsonp.rs  llm_python_js.rs  llm_strings.rs  run_tests.bat  run_tests.sh
