[package]
name = "jsonrepair"
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Fast, low-dependency JSON repair for Rust. Turns 'almost JSON' into valid JSON; supports streaming and writer-based output."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/jsonrepair"
homepage = "https://github.com/Latias94/jsonrepair"
documentation = "https://docs.rs/jsonrepair"
readme = "README.md"
keywords = ["json", "repair", "streaming", "ndjson", "jsonp"]
categories = ["parsing", "command-line-utilities"]
include = [
  "src/**",
  "include/**",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/Cargo.toml",
  "/build.rs",
  "/cbindgen.toml",
]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
memchr = "2"
thiserror = "2"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dev-dependencies]
criterion = "0.7"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
llm_json = "1.0.2"

[build-dependencies]
cbindgen = { version = "0.29", optional = true }


[features]
default = ["serde", "logging"]
serde = ["dep:serde", "dep:serde_json"]
logging = []
compare-crates-io = []
c-api = ["dep:cbindgen"]

[[bench]]
name = "repair_bench"
harness = false

[[bench]]
name = "stream_bench"
harness = false

[[bench]]
name = "container_bench"
harness = false

[[bench]]
name = "container_valid_bench"
harness = false

[[bench]]
name = "container_llm_bench"
harness = false

[[bin]]
name = "jsonrepair-cli"
path = "src/bin/jsonrepair.rs"

[[bin]]
name = "jr"
path = "src/bin/jr.rs"

[package.metadata.docs.rs]
all-features = true
