[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jsonrepair-rs"
version = "0.1.0"
description = "Fast JSON repair library - Rust-powered Python bindings"
authors = [
    {name = "Mingzhen Zhuang", email = "superfrankie621@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
keywords = ["json", "repair", "llm", "parsing", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/Latias94/jsonrepair"
Repository = "https://github.com/Latias94/jsonrepair"
Documentation = "https://github.com/Latias94/jsonrepair/tree/main/python"
"Bug Tracker" = "https://github.com/Latias94/jsonrepair/issues"
Changelog = "https://github.com/Latias94/jsonrepair/blob/main/CHANGELOG.md"
"Rust Crate" = "https://crates.io/crates/jsonrepair"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "jsonrepair._jsonrepair"
# Strip debug symbols for smaller wheels
strip = true
# Include necessary files in sdist
include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**",
    "python/**",
    "README.md",
    "../src/**",
    "../Cargo.toml",
    "../LICENSE-MIT",
    "../LICENSE-APACHE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

